macro(add_panda_fsm_state NAME)
  add_fsm_state_simple(${NAME})
  if(MC_RTC_BUILD_STATIC)
    target_link_libraries(mc_control_fsm PUBLIC mc_panda::devices)
  else()
    target_link_libraries(${NAME} PUBLIC mc_panda::devices)
  endif()
endmacro()

if(MC_PANDA_WITH_FRANKA)
  add_panda_fsm_state(PandaWaitForCollisionState)
endif()
add_panda_fsm_state(PandaStop)
add_panda_fsm_state(PumpVacuumState)
add_panda_fsm_state(PumpDropOffState)
add_panda_fsm_state(PumpStopState)
